Bug 82980 - Form Designer: assertion raised at Reference.h:402 or segfault
Summary: Form Designer: assertion raised at Reference.h:402 or segfault
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.4.0
Keywords: haveBacktrace, preBibisect
Depends on:
Blocks:
 
Reported: 2014-08-23 04:45 UTC by Terrence Enger
Modified: 2015-12-17 08:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
geb on the core file from the assertion (9.76 KB, text/plain)
2014-08-23 04:49 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2014-08-23 04:45:56 UTC
Since commit 7bbaa391 (2014-07-03, "Catch invalid null pointer
operations early"), this misbehaviour manifests itself as an assertion
at include/com/sun/star/uno/Reference.h line 402; versions of
LibreOffice prior to that, including notably bibisect-43all oldest,
fail instead with a segmentation fault reported by the JRE.

@Stephan, I am adding you to the cc because I see your name on commit
7bbaa391.


STR

(1) Run LibreOffice with command-line parameter --base to create a new
    .odb file with embedded HSQLDB database; do not register the
    database.

(2) In left pane click <Forms> and in top pane click "Create Form in
    Design View".

(3) In the toolbar at the left of the screen, click icon "List Box".
    Move the mouse cursor over the design area and observe that the
    cursor changes to a crasshair with box.

(4) In the main design area, drag the mouse from one point to another;
    observe that the program draws a rectangle between the two points.

(5) Still holding the mouse button, return to the original point.
    The rectangle previously visible disappears completely.

(6) Release the mouse button.  The program crashes, one way or the
    other.
Comment 1 Terrence Enger 2014-08-23 04:49:55 UTC
Created attachment 105131 [details]
geb on the core file from the assertion

This time, I ran LibreOffice on on existing .odb file.


This observation is from master commit 692878e, fetched 2014-08-13, configured

    --enable-option-checking=fatal --enable-dbgutil --enable-crashdump
    --without-system-postgresql --without-myspell-dicts
    --with-extra-buildid --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src

built and running on debian wheezy 64-bit.
Comment 2 Julien Nabet 2014-10-11 13:21:33 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce the crash.
Comment 3 Stephan Bergmann 2014-10-13 15:25:24 UTC
<http://cgit.freedesktop.org/libreoffice/core/commit/?id=211ad259bbc18997f9f070e59e4262885c11e924> "fdo#82980: Cancel FmXFormView::OnStartControlWizard when breaking creation"
Comment 4 Terrence Enger 2014-10-14 14:56:00 UTC
Thank you, Stephan.  In daily dbgutil bibisect repo version
2014-10-14, the crash is gone.  Setting bug status VERIFIED.
Comment 5 Robinson Tryon (qubit) 2015-12-17 08:32:17 UTC Comment hidden (obsolete)