fdo#82980: Cancel FmXFormView::OnStartControlWizard when breaking creation

The problem is that SdrCreateView::EndCreateObj (svx/source/svdraw/svdcrtv.cxx)
first calls FmFormObj::EndCreate (svx/source/form/fmobj.cxx) ->
FmXFormView::onCreatedFormObject (svx/source/form/fmvwimp.cxx) ->
Application::PostUserEvent( LINK( this, FmXFormView, OnStartControlWizard ) ),
and only then, upon bPntsEq, calls FmFormObj::BrkCreate
(svx/source/form/fmobj.cxx), which does not cancel the posted
OnStartControlWizard link.

The fix is apparently not perfect, though, as afterwards the text document goes
back to text input mode (cursor blinking, mouse pointer has I-beam shape) even
though the "List Box" icon is still selected.

Change-Id: I3137110a88885b04c8dde5377265b1dee91ed6ac